syntax = "proto3";
package novelmsg.v1;

import "google/api/annotations.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/descriptor.proto";
import "pagin.proto";

option go_package = "hope/api/novel/novelmsg/v1;v1";

// The NovelMsg service definition.
service NovelMsg {

  // 分页查询NovelMsg
  rpc GetPageNovelMsg (NovelMsgPageReq) returns (NovelMsgPageReply)  {
    option (google.api.http) = {
      get: "/v1/novel/msg/page"
    };
  }

  // 获取NovelMsg
  rpc GetNovelMsg (NovelMsgReq) returns (NovelMsgReply)  {
    option (google.api.http) = {
      get: "/v1/novel/msg/{id}"
    };
  }

  // 更新NovelMsg
  rpc UpdateNovelMsg (NovelMsgUpdateReq) returns (NovelMsgUpdateReply)  {
    option (google.api.http) = {
      put: "/v1/novel/msg/{id}"
      body: "*"
    };
  }

  // 创建NovelMsg
  rpc CreateNovelMsg (NovelMsgCreateReq) returns (NovelMsgCreateReply)  {
    option (google.api.http) = {
      post: "/v1/novel/msg"
      body: "*"
    };
  }

  // 删除NovelMsg
  rpc DeleteNovelMsg (NovelMsgDeleteReq) returns (NovelMsgDeleteReply)  {
    option (google.api.http) = {
      delete: "/v1/novel/msg/{id}"
    };
  }

  // 批量删除NovelMsg
  rpc BatchDeleteNovelMsg (NovelMsgBatchDeleteReq) returns (NovelMsgDeleteReply)  {
    option (google.api.http) = {
      delete: "/v1/novel/msg"
    };
  }

}

// 实体数据
message NovelMsgData {
    int64 id = 1;
    //消息标题
    string title = 2;
    //消息内容
    string msg = 3;
    //消息类型,user
    string msgType = 4;
    //状态
    bool status = 5;
    //创建时间
    google.protobuf.Timestamp createdAt = 6;
    //更新时间
    google.protobuf.Timestamp updatedAt = 7;
    //创建者
    int64 createBy = 8;
    //更新者
    int64 updateBy = 9;
    //租户
    int64 tenantId = 10;

}

// 查询搜索请求
message NovelMsgPageReq {
    //分页查询参数
    pagin.Pagination pagin = 1;
    //查询条件参数
    NovelMsgReq param = 2;
}

// 查询搜索返回
message NovelMsgPageReply {
    // 返回码
    int32 code = 1;
    // 消息
    string message = 2;
    // 总条数
    int64 total = 3;
    // 查询数据
    repeated NovelMsgData items = 4;
}


// 查询搜索请求
message NovelMsgReq {
    int64 id = 1;
    //消息标题
    string title = 2;
    //消息内容
    string msg = 3;
    //消息类型,user
    string msgType = 4;
    //状态
    bool status = 5;
    //创建时间
    google.protobuf.Timestamp createdAt = 6;
    //更新时间
    google.protobuf.Timestamp updatedAt = 7;
    //创建者
    int64 createBy = 8;
    //更新者
    int64 updateBy = 9;
    //租户
    int64 tenantId = 10;

}

// 查询返回
message NovelMsgReply {
    // 返回码
    int32 code = 1;
    // 消息
    string message = 2;
    // 结果数据
    NovelMsgData result = 3;
}

// 创建NovelMsg请求
message NovelMsgCreateReq {
    //消息标题
    string title = 1;
    //消息内容
    string msg = 2;
    //消息类型,user
    string msgType = 3;
    //状态
    bool status = 4;

}

// 创建NovelMsg返回
message NovelMsgCreateReply {
    // 返回码
    int32 code = 1;
    // 消息
    string message = 2;
    // 结果数据
    NovelMsgData result = 3;
}

// 更新NovelMsg请求
message NovelMsgUpdateReq {
    int64 id = 1;
    //消息标题
    string title = 2;
    //消息内容
    string msg = 3;
    //消息类型,user
    string msgType = 4;
    //状态
    bool status = 5;

}


// 更新NovelMsg返回
message NovelMsgUpdateReply {
    // 返回码
    int32 code = 1;
    // 消息
    string message = 2;
    // 结果数据
    NovelMsgData result = 3;
}

// 删除NovelMsg请求
message NovelMsgDeleteReq {
    int64 id = 1;
}


// 批量删除NovelMsg请求
message NovelMsgBatchDeleteReq {
    repeated int64 ids = 1;
}


// 删除NovelMsg返回
message NovelMsgDeleteReply {
    // 返回码
    int32 code = 1;
    // 消息
    string message = 2;
    // 结果
    bool result = 3;
}

